--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-ZOHO_ACCESS_TOKEN=1000.e6456b7d95aca46ef1cb7d0008e32156.f4afa697018687a63c889f8294f22135
+ZOHO_ACCESS_TOKEN=1000.dabe9bd7df9c2650fc7f9bc97a27d24f.cb1da7fc9f8c6707e6d13761cdf4851b
+ZOHO_CLIENT_ID=1000.QNH4QR26EJ8QNXYGC7KEZ85IVQHBQC
+ZOHO_CLIENT_SECRET=fa80b02b416c786acef6fd04e2863bef97fbfa7b09
