--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "nodemailer": "^6.9.13"
     },
     "author": "",
     "license": "ISC"
