--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ZOHO_ACCESS_TOKEN=1000.dabe9bd7df9c2650fc7f9bc97a27d24f.cb1da7fc9f8c6707e6d13761cdf4851b
+ZOHO_REFRESH_TOKEN=1000.0fbbb7355b852585e33af15ca8df01a7.30dde41ebe34d216d1c8bdb2986dcb8e
 ZOHO_CLIENT_ID=1000.QNH4QR26EJ8QNXYGC7KEZ85IVQHBQC
 ZOHO_CLIENT_SECRET=fa80b02b416c786acef6fd04e2863bef97fbfa7b09
