Use Heroku API to set access token

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+HEROKU_API_KEY=HRKU-7b8554ca-ce4f-4283-ba6e-5484580c3028
 ZOHO_REFRESH_TOKEN=1000.0fbbb7355b852585e33af15ca8df01a7.30dde41ebe34d216d1c8bdb2986dcb8e
 ZOHO_CLIENT_ID=1000.QNH4QR26EJ8QNXYGC7KEZ85IVQHBQC
 ZOHO_CLIENT_SECRET=fa80b02b416c786acef6fd04e2863bef97fbfa7b09
